# Editor

./: .gitignore  Architecture.md  Cargo.toml  FAQ.md  README.md  file.tx  file.txt  help
append_only_str/: Cargo.toml
append_only_str/src/: iters.rs  lib.rs  rawbuf.rs  slices.rs
btep/: Cargo.toml
btep/src/: c2s.rs  lib.rs  s2c.rs
bundled/: Cargo.toml
bundled/src/: main.rs
client/: Cargo.toml
client/src/: errors.rs  lib.rs  main.rs
client/src/editor/: bindings.rs  buffer.rs  client.rs  draw.rs  mod.rs
piece-table/: Cargo.toml
piece-table/src/: client.rs  iters.rs  lib.rs  table.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  security.rs
text/: Cargo.toml
text/src/: client.rs  lib.rs
trie/src/: lib.rs
utils/: Cargo.toml
utils/src/: bufread.rs  iters.rs  lib.rs  other.rs
