[package]
name = "bundled"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { path = "../server", default-features = false }
client = { path = "../client" }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
termion = "4.0.3"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
], optional = true }
futures = { version = "0.3.31", optional = true }
tokio = { version = "1.41.1", optional = true }

[features]
security = ["server/security", "dep:sqlx", "dep:futures", "dep:tokio"]
