[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tungstenite = "0.24.0"
btep = { path = "../btep" }
utils = { path = "../utils" }
text = { path = "../text" }
base64 = "0.22.1"
