[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
btep = { path = "../btep" }
text = { path = "../text" }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
], optional = true }
futures = "0.3.31"
argon2 = { version = "0.5.3", optional = true }
tokio = { version = "1.41.1", features = ["time", "sync", "net"] }

[features]
security = ["dep:sqlx", "dep:argon2"]
